# mempalace

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  results_lme_inprocess_20260427T1959.jsonl  time_test.rs
.github/workflows/: ci.yml  mempalace-rs-storage.yml
benchmarks/: longmemeval_bench_rust.py  results_lme_inprocess_20260427T2109.jsonl  results_lme_rust_comparison_20260427_1744.jsonl  results_lme_rust_comparison_20260427_1748.jsonl  results_lme_rust_comparison_20260427_1749.jsonl  results_lme_rust_comparison_20260427_1754.jsonl  results_lme_rust_comparison_20260427_2047.jsonl  results_lme_rust_comparison_20260427_2048.jsonl
docs/: RustImplementationPhasePlans.md  RustMigration.md  RustMigrationTasks.md
docs/reviews/ask-322-1775587396649/: 2026-04-07T20-12-13.825Z-review.md  2026-04-08T04-37-02.277Z-review.md  2026-04-08T05-32-49.530Z-review.md
docs/reviews/ask-390-1775716294041/: 2026-04-09T07-28-29.062Z-review.md  2026-04-09T19-05-58.671Z-review.md  2026-04-09T19-40-32.024Z-review.md  2026-04-10T06-24-35.707Z-review.md
docs/reviews/ask-409-1775897048592/: 2026-04-11T09-35-09.008Z-review.md
docs/reviews/ask-445-1776104870100/: 2026-04-14T07-20-17.880Z-review.md  2026-04-14T08-35-33.141Z-review.md
docs/reviews/ask-454-1776190933616/: 2026-04-14T19-53-01.580Z-review.md
docs/reviews/ask-465-1776228971770/: 2026-04-15T05-35-57.390Z-review.md  2026-04-15T06-08-39.410Z-review.md  2026-04-15T11-43-47.203Z-review.md  2026-04-15T13-01-23.754Z-review.md
docs/reviews/ask-529-1776579444084/: 2026-04-19T10-10-10.801Z-review.md
docs/reviews/ask-536-1776616474458/: 2026-04-20T09-10-44.170Z-review.md  2026-04-20T13-04-18.592Z-review.md
docs/rust-phase-plans/: Phase00-Spec-Lock-And-Fixture-Harvest.md  Phase01-Workspace-And-Core-Foundations.md  Phase02-Storage-Layer.md  Phase03-Embeddings-Subsystem.md  Phase04-Ingest-Pipeline.md  Phase05-Search-And-Layered-Memory.md  Phase06-Knowledge-Graph-And-Entity-Workflow.md  Phase07-AAAK-Dialect.md  Phase08-MCP-Server.md  Phase09-CLI-And-UX-Parity.md  Phase09-Deferred-Commands.md  Phase10-Optional-Python-Interop-Tooling.md  Phase11-Low-CPU-Hardening.md  Phase12-Release-Readiness.md
docs/rust-phase0/: README.md  acceptance-criteria.md  mcp-crate-evaluation.md  parity-matrix.md  reference-environment.md
docs/rust-release/: CLI-Surface.md  Config-Schema.md  Operator-Low-CPU.md  Operator-Standard.md  Packaging-And-Validation.md  README.md  Release-Scope.md  Validation-Evidence.md
hooks/: README.md  mempalace-init-hook.sh
mempalace-rs/: Cargo.toml  rustfmt.toml
mempalace-rs/crates/mempalace-cli/: Cargo.toml
mempalace-rs/crates/mempalace-cli/examples/: lme_bench.rs
mempalace-rs/crates/mempalace-cli/src/: main.rs
mempalace-rs/crates/mempalace-config/: Cargo.toml
mempalace-rs/crates/mempalace-config/src/: config.rs  lib.rs
mempalace-rs/crates/mempalace-core/: Cargo.toml
mempalace-rs/crates/mempalace-core/src/: error.rs  ids.rs  lib.rs  profiles.rs  search.rs  tracing_setup.rs
mempalace-rs/crates/mempalace-dialect/: Cargo.toml
mempalace-rs/crates/mempalace-dialect/src/: lib.rs
mempalace-rs/crates/mempalace-embeddings/: Cargo.toml
mempalace-rs/crates/mempalace-embeddings/examples/: embedding_bench.rs
mempalace-rs/crates/mempalace-embeddings/src/: lib.rs
mempalace-rs/crates/mempalace-graph/: Cargo.toml
mempalace-rs/crates/mempalace-graph/src/: lib.rs
mempalace-rs/crates/mempalace-import/: Cargo.toml
mempalace-rs/crates/mempalace-import/src/: lib.rs
mempalace-rs/crates/mempalace-ingest/: Cargo.toml
mempalace-rs/crates/mempalace-ingest/src/: lib.rs
mempalace-rs/crates/mempalace-mcp/: Cargo.toml
mempalace-rs/crates/mempalace-mcp/src/: lib.rs  main.rs
mempalace-rs/crates/mempalace-mcp/tests/: stdio_harness.rs
mempalace-rs/crates/mempalace-search/: Cargo.toml
mempalace-rs/crates/mempalace-search/src/: lib.rs
mempalace-rs/crates/mempalace-storage/: Cargo.toml
mempalace-rs/crates/mempalace-storage/src/: engine.rs  error.rs  lance.rs  lib.rs  sqlite.rs  types.rs
scripts/: check_phase0_drift.py  phase0_capture.py
tests/: test_phase0_assets.py
tests/fixtures/phase0/: fixture-lock.json
tests/fixtures/phase0/goldens/: aaak.json  knowledge-graph.json  mcp-contract.json  palace-graph.json  search-cli.txt  search-programmatic.json  wake-up-wing-code.txt  wake-up.txt
tests/fixtures/phase0/inputs/convos/: product_strategy.txt
tests/fixtures/phase0/inputs/project_alpha/: mempalace.yaml
tests/fixtures/phase0/inputs/project_alpha/backend/: auth.py
tests/fixtures/phase0/inputs/project_alpha/docs/: plan.md
tests/fixtures/phase0/inventory/: cli-help.json  environment.json  mcp-tools.json
validation-logs/: run-bench.sh  run-per-crate-tests.sh  smoke-test.sh  test-summary.txt
