[package]
name = "mempalace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mempalace-config = { path = "../mempalace-config" }
mempalace-core = { path = "../mempalace-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
