[package]
name = "mempalace-dialect"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mempalace-core = { path = "../mempalace-core" }
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
