[package]
name = "mempalace-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fastembed = "5.13.2"
mempalace-core = { path = "../mempalace-core" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
