[package]
name = "mempalace-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mempalace-core = { path = "../mempalace-core" }
mempalace-config = { path = "../mempalace-config" }
mempalace-embeddings = { path = "../mempalace-embeddings" }
mempalace-storage = { path = "../mempalace-storage" }
blake3 = "1.8.2"
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
