[package]
name = "mempalace-search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mempalace-core = { path = "../mempalace-core" }
mempalace-dialect = { path = "../mempalace-dialect" }
mempalace-embeddings = { path = "../mempalace-embeddings" }
mempalace-storage = { path = "../mempalace-storage" }
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["macros", "rt"] }

[lints]
workspace = true
